<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/ivAcercaDeFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@drawable/autor"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">


        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/autor"
                android:textSize="24sp"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/curso"
                tools:text="@string/curso"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtInstituto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/instituto"
                tools:text="@string/instituto"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lugar"
                tools:text="@string/lugar"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEmailAcercaDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_marginEnd="376dp"
                    app:backgroundTint="#BAA0F8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@android:drawable/ic_dialog_email"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabTwitterAcercaDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left|end"
                    android:layout_margin="@dimen/fab_margin"
                    app:backgroundTint="#03A9F4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.042"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_twitter"
                    tools:layout_editor_absoluteY="7dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>